[package]
name = "dla"
version = "0.1.0"
authors = ["komm <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
chrono = "0.4.7"
rstar = "0.5.0"
cgmath = "0.17.0"
image = "0.22.1"
csv = "1"
serde = "1.0"
serde_derive="1.0"

[[example]]
name = "to_csv"
path = "./exmples/to_csv.rs"